Remove overflow-y to fix scrollbar error

--- a/client/src/Stylings/Chat.css
+++ b/client/src/Stylings/Chat.css
@@ -63,7 +63,6 @@
    width: 100%;
 
    overflow-x: hidden;
-   overflow-y: scroll;
 }
 
 /* Message.js */
